--- a/displaxflex.css
+++ b/displaxflex.css
@@ -8,6 +8,7 @@
     width: 1440px;
     display: flex;
     align-items: center;
+    
 }
 /**texto Snap asemenja icono*/
 .nav__Snap{
@@ -117,6 +118,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    color:hsl(0, 0%, 98%);
 }
 /*contener__text-parafo*/
 .contener__text-parafo{
@@ -131,4 +133,47 @@
 /*contenedor imagen principal*/
 .contener-img-principal{
     width: 476px;
+}
+
+/**********************/
+
+
+#button__Login{
+    width: max-content;
+    display: flex;
+    justify-content: end;
+    border: 1px rgb(255, 255, 255) solid;
+    background-color: hsl(0, 0%, 98%);
+    box-sizing:content-box ;
+    position: relative;
+    font-size: 18px;
+    color: hsl(0, 0%, 41%);
+}
+
+#card{
+    position: absolute;
+    top: 70px;    /*modificar pocicion de card*/
+    left: 50%;
+    width: 300px;
+    height: 300px;
+    border: 1px solid rgb(174, 174, 174);
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px 2px rgb(146, 146, 146);
+    background-color: rgb(247, 247, 247);
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+#card__user, #card__pass, #button__submint{
+    text-align: center;
+    width: 100px;
+    height: 40px;
+    border: 1px solid rgb(112, 112, 112);
+    border-radius: 5%;
+}
+#button__submint{
+    background-color: rgb(62, 62, 62);
+    color: aliceblue;
+    box-shadow: 0px 0px 20px 2px rgb(155, 155, 155);
 }
