--- a/displaxflex.css
+++ b/displaxflex.css
@@ -1,11 +1,16 @@
 /*dimenciones barra de navegacion*/
-/**{
-    /*outline: red 1px solid;
-}*/
+*{
+   /* outline: red 1px solid;*/
+}
+#centarWeb{
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 .nav{
     margin-top: 22px;
     height: 43px;
-    width: 1440px;
     display: flex;
     align-items: center;
     
@@ -17,7 +22,7 @@
 /*caja para menus, careers y about*/
 .nav__Menus{
     margin-left: 4.3%;
-    width: 380px;
+    width: 1440px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -72,8 +77,6 @@
     margin-left: 44.375%;
     width: 200px;
     display: flex;
-    justify-content: space-between;
-    display: flex;
     align-items: center;
 }
 /*bordes register*/
@@ -92,13 +95,12 @@
 /*************************fin de nav*************/
 /*contenedor pincipal texto e imagenes*/
 .contener{
-    width: 1140px;
     height: 688px;
     margin-top: 113px;
-    margin-left: 148px;
+    margin-left: 5%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
 }
 /*contenedor texto*/
 .contener__text{
@@ -130,12 +132,14 @@
 }
 /*imagenes pie de pagina*/
 .contener__img-pie{
+    
     width: 512px;
     overflow: hidden;
 }
 /*contenedor imagen principal*/
 .contener-img-principal{
     width: 476px;
+    margin-left: 5%;
 }
 
 /**********************/
